--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <div class="container-fluid">
-        <video src="Kath.mp4" controls preload="auto"></video>
+        <!-- <video src="Kath.mp4" controls preload="auto" type="video/mp4"></video> -->
+        <video controls preload="auto">
+            <source src="Kath.mp4" type="video/mp4">
+        </video>
+        <!-- <embed width="100%" height="auto" type="application/x-shockwave-flash" src="http://v9.tinypic.com/player.swf?file=72t7cp&s=9"><br><font size="1"><a href="http://es.tinypic.com/player.php?v=72t7cp&s=9">Original Video</a> - More videos at <a href="http://tinypic.com">TinyPic</a></font> -->
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
